--- a/newGuo/global/styles/layout.css
+++ b/newGuo/global/styles/layout.css
@@ -10,6 +10,7 @@ ul{list-style: none;}
     background: url("../../images/banner_01.jpg") center top no-repeat;
     width: 1440px;
     height: 500px;
+    margin: 0 auto;
     position: relative;
     cursor: pointer
 }
@@ -17,6 +18,7 @@ ul{list-style: none;}
     background: url("../../images/banner_02.jpg") center top no-repeat;
     width: 1440px;
     height: 500px;
+    margin: 0 auto;
     position: relative;
     cursor: pointer
 }
@@ -24,6 +26,7 @@ ul{list-style: none;}
     background: url("../../images/banner_03.jpg") center top no-repeat;
     width: 1440px;
     height: 500px;
+    margin: 0 auto;
     position: relative;
     cursor: pointer
 }
@@ -460,12 +463,14 @@ button{
     border:none;
     line-height: 45px;
     background-color: #ccc;
-    position: absolute;
-    right: 0;
-    top: 0;
     color: #333;
     *+width:108px;
 
+}
+.btn-valite-position{
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 /*ipad处理*/
 @media only screen
@@ -637,20 +642,23 @@ and (max-device-width : 1024px) {
         background: url("../../images/banner_01_ipad.jpg") center top no-repeat;
         width: 1140px;
         height: 396px;
+        margin: 0 auto;
         position: relative;
         cursor: pointer
     }
     .index-banner-2{
-        background: url("../../images/banner_02.jpg") center top no-repeat;
+        background: url("../../images/banner_02_ipad.jpg") center top no-repeat;
         width: 1140px;
         height: 396px;
+        margin: 0 auto;
         position: relative;
         cursor: pointer
     }
     .index-banner-3{
-        background: url("../../images/banner_03.jpg") center top no-repeat;
+        background: url("../../images/banner_03_ipad.jpg") center top no-repeat;
         width: 1140px;
         height: 396px;
+        margin: 0 auto;
         position: relative;
         cursor: pointer
     }
