--- a/father/css/layout.css
+++ b/father/css/layout.css
@@ -127,23 +127,48 @@ body{
     font-size: 42px;
     color: #000;
 }
+.bg-three{
+    background: url("../images/1_15.jpg") center top no-repeat;
+    height: 901px;
+}
+.bg-four{
+    background: url("../images/1_16.jpg") center top no-repeat;
+    height: 774px;
+}
 .middle-left{
     width: 590px;
     float: left;
     height: 612px;
-    border:1px solid #ccc ;
-    margin-right: 10px;
+    margin-right: 20px;
 }
 .middle-right{
     width: 340px;
     float: left;
     height: 612px;
-    border:1px solid #ccc ;
 }
 .left-one{
+    width: 288px;
     float: left;
     margin-right:10px;
 }
 .left-two{
+    width: 288px;
     float: left;
+}
+.right-one{
+    width: 100%;
+    height: 160px;
+    text-align: center;
+    background-color: rgba(160,160,160,0.3);
+}
+.right-two{
+    width: 100%;
+    height: 437px;
+    text-align: center;
+    margin-top: 3px;
+    background-color: rgba(160,160,160,0.3);
+}
+.sina-weibo{
+    height: 500px;
+    border:1px solid #ccc;
 }
