--- a/father/css/layout.css
+++ b/father/css/layout.css
@@ -1,3 +1,6 @@
+body{
+    overflow-x: hidden;
+}
 .container { width: 960px; margin: 0 auto; position: relative; }
 .container-big{ width: 1440px; margin: 0 auto; position: relative;}
 .banner{
@@ -17,12 +20,14 @@ body{
 .footer{
     background:url("../images/1_13.jpg") center top no-repeat;
     width: 1440px;
+    cursor: pointer;
     height: 228px;
 }
 .second-title {
     font-size: 42px;
     font-weight: normal;
     height: 42px;
+    line-height: 42px;
     width: 100%;
     text-align: center;
     margin-top: 80px;
@@ -55,9 +60,10 @@ body{
     width: 147px;
     font-size: 16px;
     position: fixed;
-    right: 40px;
-    bottom: 100px;
+    right: 5px;
+    bottom: 15px;
 }
+
 .right-fixed li a {
     color: #000;
 }
@@ -116,7 +122,7 @@ body{
 
 }
 .bg-two>div{
-    padding-top: 300px;
+    padding-top: 100px;
 }
 .bg-two>div span{
     font-size: 60px;
@@ -125,7 +131,9 @@ body{
 .bg-two>div>div {
     margin-top: 24px;
     font-size: 42px;
+    height: 42px;
     color: #000;
+    line-height: 42px;
 }
 .bg-three{
     background: url("../images/1_15.jpg") center top no-repeat;
@@ -159,16 +167,33 @@ body{
     width: 100%;
     height: 160px;
     text-align: center;
-    background-color: rgba(160,160,160,0.3);
+    background-color: rgba(255,255,255,0.3);
 }
 .right-two{
     width: 100%;
     height: 437px;
     text-align: center;
     margin-top: 3px;
-    background-color: rgba(160,160,160,0.3);
+    background-color: rgba(255,255,255,0.3);
 }
 .sina-weibo{
-    height: 500px;
-    border:1px solid #ccc;
+    height: 800px;
+}
+.more-detail{
+    color: #b63333;
+}
+
+@media (max-width: 1260px) {
+    .right-fixed-one{
+        display: none;
+    }
+    .right-fixed-two{
+        display: none;
+    }
+    .right-fixed-three{
+        display: none;
+    }
+    .right-fixed-four{
+        display: none;
+    }
 }
