--- a/weixinApp/appmodel/themes/css/mystyle.css
+++ b/weixinApp/appmodel/themes/css/mystyle.css
@@ -1306,7 +1306,7 @@ body {
 
 /* line 3, ../../../themes/scss/include/_skeleton.scss */
 body {
-  background: black;
+  background: #f8f8f8;
     font-family: "microsoft yahei";
 }
 
@@ -1853,14 +1853,76 @@ body {
   border-width: 1px 0;
   border-style: solid;
   background-image: none;
-  background-color: #c3c3c3;
-  border-top-color: #c8c8c8;
-  border-bottom-color: #bbbbbb;
+    margin-top: 0;
+  background-color: #fff;
+    position: relative;
+  border-top:none;
+  border-bottom-color: #f8f8f8;
+    height: 80px;
+}
+#jqt ul.plastic li a:before {
+    content: ' ';
+    vertical-align: middle;
+    font-weight: bold;
+    position: absolute;
+    left: -9999px;
+    top: 50%;
+    margin-top: -13px;
+    z-index: 10;
+    font-size: 24pt;
+    text-align: center;
+    border: 1px solid #ccc;
+    background-size: 25px 25px;
+    display: block;
+    height: 25px;
+    width: 25px;
+}
+
+
+#jqt ul.plastic li a{
+    padding-left: 80px;
+    padding-top: 30px;
+    height: 80px;
+}
+#jqt ul.plastic li a span{
+    font-size: 14px;
+    color: #999;
+}
+#jqt ul.plastic li a.active{
+    background-color: transparent;
+    color: #333;
+}
+#jqt ul.plastic li img{
+    height: 50px;
+    width: 50px;
+    margin-top: -24px;
+    top: 50%;
+    position: absolute;
+    left: 10px;
+}
+.look-button{
+    width: 100px;
+    height: 40px!important;
+    line-height: 40px!important;
+    font-size: 14px;
+    cursor: pointer;
+    color: #fff!important;
+    border: none;
+    text-align: center;
+    background-color: #d83b38;
+    font-family: "microsoft yahei";
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    margin-top: -20px;
+}
+.look-button:active,.look-button:hover{
+    background-color: #c12926;
 }
 /* line 503, ../../../themes/scss/include/_skeleton.scss */
 #jqt ul.plastic li:nth-child(odd) {
   background-image: none;
-  background-color: #c8c8c8;
+  background-color: #fff;
 }
 /* line 507, ../../../themes/scss/include/_skeleton.scss */
 #jqt ul.plastic li a.active.loading {
@@ -2022,6 +2084,7 @@ body {
 .item-title{
     max-width: 720px;
     margin: 0 auto;
+    margin-top: 50px;
     position: relative;
 }
 .item-title h1{
@@ -2055,8 +2118,24 @@ body {
     top: 18px;
 }
 .logo img{
+    -webkit-transform: scale(0.7) rotateY(60deg) rotateX(-50deg) translateX(-10px);
+    -moz-transform: scale(0.7) rotateY(60deg) rotateX(-50deg) translateX(-10px);
+    -ms-transform: scale(0.7) rotateY(60deg) rotateX(-50deg) translateX(-10px);
+    -o-transform: scale(0.7) rotateY(60deg) rotateX(-50deg) translateX(-10px);
+    transform: scale(0.7) rotateY(60deg) rotateX(-50deg) translateX(-10px);
+    -webkit-transition: all 1.2s ease;
+    -moz-transition: all 1.2s ease;
+    -o-transition: all 1.2s ease;
+    transition: all 1.2s ease;
     height: 60px;
     width: 60px;
+}
+.logo.animated img{
+    -webkit-transform: none;
+    -moz-transform: none;
+    -ms-transform: none;
+    -o-transform: none;
+    transform: none;
 }
 .item-title p{
     padding:0 10px 10px 10px;
@@ -2122,4 +2201,79 @@ body {
     color: #b74a36!important;
 }
 
+.brief-result{
+    text-align: left;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.brief-result h3{
+    font-family: "microsoft yahei";
+    color: #333;
+    margin-left: 20px;
+    font-weight: normal;
+}
+.brief-result h1{
+    font-size: 24px!important;
+    font-family: "microsoft yahei";
+    font-weight: normal!important;
+    margin-top: 0!important;
+    color: #b74a36!important;
+}
+.brief-result p{
+    font-family: "microsoft yahei";
+    margin:10px 20px 20px 20px ;
+    line-height: 24px;
+}
+#ad{
+    position: absolute;
+    z-index: 9998;
+    text-align: center;
+    left: 0;
+    right: 0;
+}
+#ad a img{
+    width: 100%;
+    max-width: 720px;
+    min-height: 50px;
+}
 
+/*结果页tab*/
+.etabs{
+    margin-top: 50px;
+    background-color: #fff;
+    height: 50px;
+    line-height: 50px;
+}
+.tab{
+    display: inline-block;
+    width: 50%;
+    text-align: center;
+}
+.tab a{
+    text-decoration: none;
+    color: #333;
+    display: inline-block;
+    width: 100%;
+}
+.tab-selected{
+    background-color: #f8f8f8;
+}
+
+
+.result-title h1{
+    margin-top: 20px;
+    color: #333!important;
+}
+.result-title .logo{
+    margin-top: 100px;
+}
+.restart{
+    text-align: center;
+    margin-top: 30px;
+}
+.restart a{
+    color: #999;
+    text-decoration: none;
+    font-family: "microsoft yahei";
+    font-size: 18px;
+}
