--- a/weixinApp/appmodel/themes/css/mystyle.css
+++ b/weixinApp/appmodel/themes/css/mystyle.css
@@ -2086,6 +2086,10 @@ body {
     margin: 0 auto;
     margin-top: 50px;
     position: relative;
+    -webkit-transition: all 1.2s ease;
+    -moz-transition: all 1.2s ease;
+    -o-transition: all 1.2s ease;
+    transition: all 1.2s ease;
 }
 .item-title h1{
     font-size: 24px!important;
@@ -2243,6 +2247,10 @@ body {
     background-color: #fff;
     height: 50px;
     line-height: 50px;
+    -webkit-transition: all 1.2s ease;
+    -moz-transition: all 1.2s ease;
+    -o-transition: all 1.2s ease;
+    transition: all 1.2s ease;
 }
 .tab{
     display: inline-block;
