--- a/newGuo/cart/styles/cart.css
+++ b/newGuo/cart/styles/cart.css
@@ -911,7 +911,30 @@ h2.order-title {
     float: left;
     margin-right: 22px;
 }
-
+.popup{
+    position: absolute;
+    top: 1030px;
+    width: 590px;
+    left: 50%;
+    visibility: hidden;
+    z-index: 9999;
+    height: 307px;
+    background-color: #fff;
+    margin-left: -295px;
+}
+.avgrund-cover {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 9998;
+    visibility: hidden;
+    opacity: 1;
+    background: rgba( 0, 0, 0, 0.5 );
+    *background:#000;
+    *filter:alpha(opacity=50);
+}
 @media (max-width: 1260px) {
     .pay-method{
         height: 160px;
