--- a/weixinApp/appmodel/themes/css/mystyle.css
+++ b/weixinApp/appmodel/themes/css/mystyle.css
@@ -2240,7 +2240,7 @@ body {
 }
 #ad{
     position: absolute;
-    z-index: 9998;
+    z-index: 98;
     text-align: center;
     left: 0;
     right: 0;
@@ -2280,13 +2280,15 @@ body {
 .panel-container{
     margin-top: 20px;
 }
-
+.result-title{
+    position: relative;
+}
 .result-title h1{
     margin-top: 20px;
     color: #333!important;
 }
 .result-title .logo{
-    margin-top: 100px;
+    margin-top: 0px;
 }
 .restart{
     text-align: center;
@@ -2307,16 +2309,6 @@ body {
     background-image: url("../images/guide.png");
     background-size: 100%;
     background-repeat: no-repeat;
-    z-index: 9999;
-}
-#mobile-guide{
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    background-image: url("../images/mobile-guide.png");
-    background-size: 26.5rem 26.5rem;
-    background-repeat: no-repeat;
-    background-position:bottom ;
     z-index: 9999;
 }
 .share-cover{
