--- a/weixinApp/appmodel/themes/css/mystyle.css
+++ b/weixinApp/appmodel/themes/css/mystyle.css
@@ -1,20 +1,20 @@
 /**
  * Background noise recipe
- * 
+ *
  * This recipe use a sass function to generate a .png file
- * 
+ *
  * Inspired by a jQuery plugin "Noisy" by Daniel Rapp @DanielRapp
  * @link https://github.com/DanielRapp/Noisy
- * 
+ *
  * Converted using Sass by Aaron Russell @aaronrussell & Philipp Bosch @philippbosch
  * @link https://gist.github.com/1021332
- * 
+ *
  * Ported to a sass gem by Antti Salonen @antsa
  * @link https://github.com/antsa/sassy_noise
- * 
+ *
  * Mixin:        background-noise
  * Function:     background_noise
- * 
+ *
  * @author Daniel Rapp @DanielRapp
  * @author Aaron Russell @aaronrussell
  * @author Philipp Bosch @philippbosch
@@ -29,31 +29,31 @@
  */
 /**
  * Adds a background gradient into a specified selector.
- * 
+ *
  *     @include background-gradient(#444, 'glossy');
- * 
+ *
  * You can also use color-stops if you want full control of the gradient:
- * 
+ *
  *     @include background-gradient(#444, color-stops(#333, #222, #111));
- * 
+ *
  * @param {color} $bg-color
  * The base color of the gradient.
- * 
+ *
  * @param {string/list} $type
  * The style of the gradient, one of five pre-defined options: matte, bevel, glossy, recessed, or linear:
  *
  *     @include background-gradient(red, 'glossy');
  *
  * It can also accept a list of color-stop values:;
- * 
+ *
  *     @include background-gradient(black, color-stops(#333, #111, #000));
- * 
+ *
  * @param {string} $direction
  * The direction of the gradient.
  */
 /**
  * Blueprint grid background pattern
- * 
+ *
  * @link http://lea.verou.me/css3patterns/#blueprint-grid
  *
  * @author Lea Verou http://lea.verou.me/ for the original pattern
@@ -61,12 +61,12 @@
  */
 /**
  * Background overlay inspired by Google Chrome modal overlay
- * 
+ *
  * @author Maxime Thirouin @MoOx maxime.thirouin@gmail.com
  */
 /**
  * Striped background pattern
- * 
+ *
  * @link http://lea.verou.me/css3patterns/
  *
  * @author Lea Verou http://lea.verou.me/ for the original pattern
@@ -96,7 +96,7 @@
 /**
  * Normalize.css
  * Opposite approche from CSS reset
- * 
+ *
  * Based on normalize.css commit 9576d48fc234c5224b1fc4dccba2f5965243843d
  *
  * @link http://github.com/necolas/normalize.css
@@ -152,7 +152,7 @@
 /**
  * Glass effect
  * Use this on image for better effect render
- * 
+ *
  * Inspired from Simurai's IMDB redisign
  *
  * @link http://lab.simurai.com/redesign/imdb
@@ -166,10 +166,10 @@
  */
 /**
  * Scotch tape effect with pure CSS
- * 
+ *
  * @thanks Nick La @nickla for original concept
  * @link http://webdesignerwall.com/tutorials/css3-image-styles
- * 
+ *
  * @author David Kaneda http://www.davidkaneda.com
  *
  */
@@ -181,11 +181,11 @@
  */
 /**
  * Corner folded with pure CSS
- * 
+ *
  * Known support: Firefox 3.5+, Chrome 4+, Safari 4+, Opera 10+, IE 9+.
  * IE8 is not supported because it not render properly box-shadow and
  * pseudo element should be selected with ::element and not :element
- * 
+ *
  * @thanks Nicolas Gallagher @necolas
  * @link http://nicolasgallagher.com/pure-css-folded-corner-effect/demo/
  * @todo Nix in .4
@@ -198,11 +198,11 @@
  */
 /**
  * Corner folded with pure CSS
- * 
+ *
  * Known support: Firefox 3.5+, Chrome 4+, Safari 4+, Opera 10+, IE 9+.
  * IE8 is not supported because it not render properly box-shadow and
  * pseudo element should be selected with ::element and not :element
- * 
+ *
  * @thanks Nicolas Gallagher @necolas
  * @link http://nicolasgallagher.com/pure-css-folded-corner-effect/demo/
  */
@@ -222,15 +222,15 @@
 /**
  * Vertical alignement for page
  * Inspired by http://css-tricks.com/snippets/css/center-div-with-dynamic-height/
- * 
+ *
  * Usage:
- * 
+ *
  * SCSS
  * @include vertical-align-requirement;
  * .v-align-container { @include vertical-align-container }
  * .v-align-content-container { @include vertical-align-content-container }
  * .v-align-content { @include vertical-align-content }
- * 
+ *
  * HTML
  * <body>
  *     <div class="v-align-container">
@@ -238,7 +238,7 @@
  *             <div class="v-align-content">
  *             Your content !
  *             </div>
- *         </div> 
+ *         </div>
  *     </div>
  * </body>
  *
@@ -247,9 +247,9 @@
  */
 /**
  * Media Queries Mixins
- * 
+ *
  * @todo Do we have to take care of print ?
- * 
+ *
  * @require sass-3.2 (you need eventually to do "sudo gem install sass --pre")
  * @author Maxime Thirouin <maxime.thirouin@gmail.com>
  */
@@ -260,9 +260,9 @@ $media-query-width-small: 480px;
 */
 /**
  * Drop shadow mixins from Nicolas Gallagher demo
- * 
+ *
  * @thanks Nicolas Gallagher @necolas, @simurai, @cameronmoll, @matthamm
- * 
+ *
  * @link http://nicolasgallagher.com/css-drop-shadows-without-images/demo/
  */
 /**
@@ -303,7 +303,7 @@ $media-query-width-small: 480px;
  */
 /**
  * Drop shadow rules required for transform on drop shadow
- * 
+ *
  * /!\ This is required if you want to apply some transform on the element using drop shadow
  *
  * @thanks Nicolas Gallagher @necolas
@@ -311,13 +311,13 @@ $media-query-width-small: 480px;
  */
 /**
  * Shadow along the top edge of the browser viewport
- * 
+ *
  * @link http://playground.genelocklin.com/depth/
  */
 /**
 * Shapes !
 * Polygons, ellipses and symbols
-* 
+*
 * @thanks Chris Coyier @chriscoyier
 * @link http://css-tricks.com/examples/ShapesOfCSS/
 * @author Maxime Thirouin maxime.thirouin@gmail.com @MoOx
@@ -392,7 +392,7 @@ $media-query-width-small: 480px;
  * Shape/Symbol/Diamond
  *
  * @todo add height support
- * 
+ *
  * @author Alexander Futekov
  * @author Maxime Thirouin maxime.thirouin@gmail.com @MoOx
  */
@@ -403,13 +403,13 @@ $media-query-width-small: 480px;
  */
 /**
  * Shape/Symbol/Heart
- * 
+ *
  * @author Nicolas Gallagher @necolas
  * @author Maxime Thirouin maxime.thirouin@gmail.com @MoOx
  */
 /**
  * Shape/Symbol/Infinity
- * 
+ *
  * @author Nicolas Gallagher @necolas
  * @author Maxime Thirouin maxime.thirouin@gmail.com @MoOx
  */
@@ -426,7 +426,7 @@ $media-query-width-small: 480px;
  */
 /**
  * Micro clearfix hack
- * 
+ *
  * The clearfix hack is a popular way to clear floats without resorting to using presentational markup. This article presents an update to the clearfix method that further reduces the amount of CSS required.
  * Known support: Firefox 2+, Safari 2+, Chrome, Opera 9.27+, IE 6+, IE Mac.
  *
@@ -483,12 +483,12 @@ $media-query-width-small: 480px;
 */
 /**
  * Ui background overlay inspired by Google Chrome modal overlay
- * 
+ *
  * @author Maxime Thirouin @MoOx maxime.thirouin@gmail.com
  */
 /**
  * Background overlay inspired by Google Chrome modal overlay
- * 
+ *
  * @author Maxime Thirouin @MoOx maxime.thirouin@gmail.com
  */
 /**
@@ -501,7 +501,7 @@ $media-query-width-small: 480px;
  */
 /**
  * Micro clearfix hack
- * 
+ *
  * The clearfix hack is a popular way to clear floats without resorting to using presentational markup. This article presents an update to the clearfix method that further reduces the amount of CSS required.
  * Known support: Firefox 2+, Safari 2+, Chrome, Opera 9.27+, IE 6+, IE Mac.
  *
@@ -522,49 +522,49 @@ $media-query-width-small: 480px;
  */
 /**
  * Adds a background gradient into a specified selector.
- * 
+ *
  *     @include background-gradient(#444, 'glossy');
- * 
+ *
  * You can also use color-stops if you want full control of the gradient:
- * 
+ *
  *     @include background-gradient(#444, color-stops(#333, #222, #111));
- * 
+ *
  * @param {color} $bg-color
  * The base color of the gradient.
- * 
+ *
  * @param {string/list} $type
  * The style of the gradient, one of five pre-defined options: matte, bevel, glossy, recessed, or linear:
  *
  *     @include background-gradient(red, 'glossy');
  *
  * It can also accept a list of color-stop values:;
- * 
+ *
  *     @include background-gradient(black, color-stops(#333, #111, #000));
- * 
+ *
  * @param {string} $direction
  * The direction of the gradient.
  */
 /**
  * @class Webfont Icon
  * Great to use with the [Pictos font](http://pictos.drewwilson.com/)
- * 
+ *
  */
 /**
  * @cfg {color} $webfont-icon-base-color
  * The default color of icons when using the {@link #webfont-icon} mixin.
- * 
+ *
  * Defaults to `white`.
  */
 /**
  * @cfg {color} $webfont-icon-default-stroke
  * The default color to use on the border of icons, when using the {@link #webfont-icon} mixin.
- * 
+ *
  * Defaults to `null`.
  */
 /**
  * @cfg {string} $webfont-icon-default-gradient
  * The default gradient to use when using the {@link #webfont-icon} mixin.
- * 
+ *
  * Defaults to `matte`.
  */
 /* line 41, ../../../submodules/compass-recipes/stylesheets/recipes/_webfont-icon.scss */
@@ -583,18 +583,18 @@ $media-query-width-small: 480px;
 
 /**
  * Includes a character into the specified selector, styled as an icon.
- * 
+ *
  *     @include webfont-icon('a');
- * 
+ *
  * @param {color} $color
  * The color of the icon. Defaults to {@link #$webfont-icon-default-background $webfont-icon-default-background}.
- * 
+ *
  * @param {measurement} $size
  * The size of the icon
- * 
+ *
  * @param {color} $stroke
  * The color of the border. Defautls to {@link #$webfont-icon-default-border $webfont-icon-default-border}.
- * 
+ *
  * @param {boolean} $include-staes
  * True to include states for hover and active. Defaults to `true`.
  */
@@ -667,7 +667,6 @@ body {
 /* line 61, ../../../themes/scss/include/_base.scss */
 #jqt.touchscroll:not(.animating3d), #jqt.autoscroll:not(.animating3d) {
   overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
 }
 /* line 65, ../../../themes/scss/include/_base.scss */
 #jqt.touchscroll:not(.animating3d) > *, #jqt.autoscroll:not(.animating3d) > * {
@@ -676,7 +675,6 @@ body {
 /* line 68, ../../../themes/scss/include/_base.scss */
 #jqt.touchscroll:not(.animating3d) .scroll, #jqt.autoscroll:not(.animating3d) .scroll {
   position: relative;
-  -webkit-overflow-scrolling: touch;
 }
 /* line 77, ../../../themes/scss/include/_base.scss */
 #jqt.touchscroll:not(.animating3d) .scroll {
@@ -685,7 +683,7 @@ body {
 }
 /* line 83, ../../../themes/scss/include/_base.scss */
 #jqt .scroll {
-  -webkit-margin-collapse: separate;
+
 }
 /* line 87, ../../../themes/scss/include/_base.scss */
 #jqt .in, #jqt .out {
@@ -1311,25 +1309,6 @@ body {
 }
 
 /* line 7, ../../../themes/scss/include/_skeleton.scss */
-.base-chevron, #jqt ul li.arrow:after, #jqt ul li.forward:after {
-  content: '›';
-  width: 22px;
-  height: 20px;
-  vertical-align: middle;
-  font-size: 30px;
-  line-height: 20px;
-  font-family: Futura, "Futura Condensed", Helvetica, Arial, sans-serif;
-  font-weight: bold;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
-  opacity: 0.6;
-    color: #ccc;
-  position: absolute;
-  right: 0;
-  top: 50%;
-    margin-top: -10px;
-  pointer-events: none;
-  z-index: 10;
-}
 
 /* line 24, ../../../themes/scss/include/_skeleton.scss */
 .base-flatlists, #jqt ul.metal, #jqt ul.edgetoedge, #jqt ul.plastic {
@@ -1505,7 +1484,6 @@ body {
 #jqt ul {
   padding: 0;
   margin: 5px 10px 10px 10px;
-  -webkit-margin-collapse: separate;
 }
 /* line 236, ../../../themes/scss/include/_skeleton.scss */
 #jqt ul, #jqt ul.individual li {
@@ -1524,7 +1502,6 @@ body {
   overflow: hidden;
   padding:5px 10px 5px 10px;
     background-color: #fff;
-  -webkit-transform: translate3d(0, 0, 0);
   /* expensive way to avoid flickr */
   position: relative;
     margin-top: 10px;
@@ -1541,7 +1518,6 @@ body {
     padding: 18px 40px 18px 50px;
   margin: -10px;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  -webkit-transform: translateZ(0);
   color: #151515;
   text-shadow: white 0 1px 0;
 }
@@ -1568,6 +1544,22 @@ body {
     height: 25px;
     width: 25px;
 }
+#jqt ul.metal li a:before{
+    content: ' ';
+    vertical-align: middle;
+    font-weight: bold;
+    position: absolute;
+    left: 10px;
+    top: 172px;
+    z-index: 10;
+    font-size: 24pt;
+    text-align: center;
+    border: 1px solid #ccc;
+    background-size: 25px 25px;
+    display: block;
+    height: 25px;
+    width: 25px;
+}
 #jqt ul li a.active:before, #jqt ul li a.selected:before{
     content: ' ';
     vertical-align: middle;
@@ -1576,6 +1568,22 @@ body {
     left: 10px;
     top: 50%;
     margin-top: -13px;
+    z-index: 10;
+    font-size: 24pt;
+    text-align: center;
+    background: url("../img/right_three.png") center no-repeat;
+    background-size: 25px 25px;
+    display: block;
+    height: 25px;
+    width: 25px;
+}
+#jqt ul.metal li a.active:before, #jqt ul.metal li a.selected:before{
+    content: ' ';
+    vertical-align: middle;
+    font-weight: bold;
+    position: absolute;
+    left: 10px;
+    top: 172px;
     z-index: 10;
     font-size: 24pt;
     text-align: center;
@@ -1693,7 +1701,7 @@ body {
 }
 /* line 388, ../../../themes/scss/include/_skeleton.scss */
 #jqt ul li.forward:after {
-  content: "›";
+  content: "?";
   position: absolute;
   display: block;
   width: 24px;
@@ -1772,44 +1780,6 @@ body {
   margin: 0;
   padding: 13px 0;
     padding-left: 50px;
-}
-#jqt ul.metal li.arrow:after{
-    content: '›';
-    width: 22px;
-    height: 20px;
-    vertical-align: middle;
-    font-size: 30px;
-    line-height: 20px;
-    font-family: Futura, "Futura Condensed", Helvetica, Arial, sans-serif;
-    font-weight: bold;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
-    opacity: 0.6;
-    position: absolute;
-    color: #ccc;
-    right: 0;
-    top: 50%;
-    margin-top: -10000px;
-    pointer-events: none;
-    z-index: 10;
-}
-#jqt ul.metal li a:after{
-    content: '›';
-    width: 22px;
-    height: 20px;
-    vertical-align: middle;
-    font-size: 30px;
-    line-height: 20px;
-    font-family: Futura, "Futura Condensed", Helvetica, Arial, sans-serif;
-    font-weight: bold;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
-    opacity: 0.6;
-    position: absolute;
-    color: #ccc;
-    right: 0;
-    top: 50%;
-    margin-top: -10px;
-    pointer-events: none;
-    z-index: 10;
 }
 /* line 448, ../../../themes/scss/include/_skeleton.scss */
 #jqt ul.metal li em {
@@ -1890,7 +1860,7 @@ body {
 #jqt ul.plastic li a span{
     font-size: 12px;
     width: 140px;
-    height: 34px;
+    height: 27px;
     overflow: hidden;
     white-space: normal;
     display: inline-block;
@@ -2199,6 +2169,7 @@ body {
     text-align: center;
     height: 30px;
     margin:0 auto;
+    margin-top: 20px;
 }
 .detail-result{
     text-align: center;
@@ -2237,6 +2208,7 @@ body {
     font-family: "microsoft yahei";
     font-weight: normal!important;
     margin-top: 0!important;
+    margin-left: 10px!important;
     color: #b74a36!important;
 }
 .brief-result p{
@@ -2257,16 +2229,23 @@ body {
     font-weight: normal;
 }
 #ad{
-    position: absolute;
+    position: fixed;
     z-index: 98;
     text-align: center;
     left: 0;
     right: 0;
+    height: 50px;
+}
+#ad a {
+    display: inline-block;
+    *display: inline;
+    position: relative;
+    zoom: 1;
 }
 #ad a img{
-    width: 100%;
     max-width: 720px;
-    min-height: 50px;
+    width: 100%;
+    height: auto;
 }
 
 /*结果页tab*/
@@ -2385,6 +2364,18 @@ and (max-device-width : 568px) {
         font-size: 12px;
         width: 140px;
         height: 30px;
+        overflow: hidden;
+        white-space: normal;
+        display: inline-block;
+        color: #999;
+    }
+}
+
+@media (min-width: 768px) {
+    #jqt ul.plastic li a span{
+        font-size: 12px;
+        width: 140px;
+        height: 34px;
         overflow: hidden;
         white-space: normal;
         display: inline-block;
